UI: Fix alignment.

--- a/src/components/Slices/components/Carousel/Carousel.scss
+++ b/src/components/Slices/components/Carousel/Carousel.scss
@@ -2,6 +2,7 @@
 
 .Slice.Slice-Carousel {
     width: 100vw !important;
+    max-width: 100%;
     overflow-y: hidden;
 
     &.Index-0 {
